--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "fs": "^0.0.1-security",
+    "uuidv4": "^6.2.13"
   },
   "keywords": [],
   "description": ""
